@@ -1,5 +1,5 @@
 Name: Geometry
-Version: 1.0.0
+Version: 1.0.1
 Date: 2006-08-06
 Author: Various Authors
 Maintainer: The Octave Community
